# ml_RainfallPredict

./: README  README.md  pyproject.toml  requirements.txt
notebooks/: Rainfall_model.pkl  experiment_01.ipynb
src/: app.py
src/static/: style.css
src/templates/: index.html
